--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
     "express": "^4.18.2",
     "express-validator": "^6.14.3",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.9.1"
+    "mongoose": "^6.9.1",
+    "stripe": "^11.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
